Issue 51085: Grid button spacing issue for hover border (#1567)
### version 5.1.1
*Released*: 9 September 2024
- Issue 51085: Grid button spacing issue for hover border

--- a/packages/components/src/theme/query-model.scss
+++ b/packages/components/src/theme/query-model.scss
@@ -177,6 +177,10 @@
             background-color: transparent;
         }
     }
+
+    button {
+        margin-right: 4px; // Issue 51085
+    }
 }
 
 .grid-panel__checkbox {
